--- a/Emulator/CMakeLists.txt
+++ b/Emulator/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
 
 # Set the project name
-project(vc64Core)
+project(tiaraCore)
 
 # Enable testing
 enable_testing()
@@ -17,35 +17,35 @@ set(CMAKE_BUILD_TYPE Release)
 endif()
 
 # Add the emulator library
-add_library(vc64Core VirtualC64.cpp config.cpp)
+add_library(tiaraCore Tiara.cpp config.cpp)
 
-# Add the console app (VirtualC64 Headless)
-add_executable(vc64Console Headless.cpp config.cpp)
-target_link_libraries(vc64Console vc64Core)
+# Add the console app (Tiara Headless)
+add_executable(tiaraConsole Headless.cpp config.cpp)
+target_link_libraries(tiaraConsole tiaraCore)
 
 # Specify compile options
-target_compile_definitions(vc64Core PUBLIC _USE_MATH_DEFINES)
+target_compile_definitions(tiaraCore PUBLIC _USE_MATH_DEFINES)
 if(WIN32)
-  target_link_libraries(vc64Console ws2_32)
+  target_link_libraries(tiaraConsole ws2_32)
 endif()
 if(MSVC)
-  target_compile_options(vc64Core PUBLIC /W4 /WX /Zc:preprocessor)
-  target_compile_options(vc64Core PUBLIC /wd4100 /wd4201 /wd4324 /wd4458 /wd4996)
+  target_compile_options(tiaraCore PUBLIC /W4 /WX /Zc:preprocessor)
+  target_compile_options(tiaraCore PUBLIC /wd4100 /wd4201 /wd4324 /wd4458 /wd4996)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  target_compile_options(vc64Core PUBLIC -Wall -Werror)
-  target_compile_options(vc64Core PUBLIC -Wno-restrict)
-  target_compile_options(vc64Core PUBLIC -Wno-unused-parameter)
-  target_compile_options(vc64Core PUBLIC -Wno-attributes)
-  target_compile_options(vc64Core PUBLIC -fconcepts)
+  target_compile_options(tiaraCore PUBLIC -Wall -Werror)
+  target_compile_options(tiaraCore PUBLIC -Wno-restrict)
+  target_compile_options(tiaraCore PUBLIC -Wno-unused-parameter)
+  target_compile_options(tiaraCore PUBLIC -Wno-attributes)
+  target_compile_options(tiaraCore PUBLIC -fconcepts)
 else()
-  target_compile_options(vc64Core PUBLIC -Wall -Werror)
-  target_compile_options(vc64Core PUBLIC -Wno-unused-parameter)
-  target_compile_options(vc64Core PUBLIC -Wno-gnu-anonymous-struct)
-  target_compile_options(vc64Core PUBLIC -Wno-nested-anon-types)
+  target_compile_options(tiaraCore PUBLIC -Wall -Werror)
+  target_compile_options(tiaraCore PUBLIC -Wno-unused-parameter)
+  target_compile_options(tiaraCore PUBLIC -Wno-gnu-anonymous-struct)
+  target_compile_options(tiaraCore PUBLIC -Wno-nested-anon-types)
 endif()
 
 # Add include paths
-target_include_directories(vc64Core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(tiaraCore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Add sub directories
 add_subdirectory(Base)
@@ -59,9 +59,9 @@ add_subdirectory(Utilities)
 # Add libraries
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
-target_link_libraries(vc64Core resid Threads::Threads)
+target_link_libraries(tiaraCore resid Threads::Threads)
 
 # Add tests
-add_test(NAME SelfTest1 COMMAND vc64Console --verbose --footprint)
-add_test(NAME SelfTest2 COMMAND vc64Console --verbose --smoke)
-add_test(NAME SelfTest3 COMMAND vc64Console --verbose --diagnose)
+add_test(NAME SelfTest1 COMMAND tiaraConsole --verbose --footprint)
+add_test(NAME SelfTest2 COMMAND tiaraConsole --verbose --smoke)
+add_test(NAME SelfTest3 COMMAND tiaraConsole --verbose --diagnose)
