--- a/Emulator/Components/CMakeLists.txt
+++ b/Emulator/Components/CMakeLists.txt
@@ -1,7 +1,7 @@
 
-target_include_directories(vc64Core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(tiaraCore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_sources(vc64Core PRIVATE
+target_sources(tiaraCore PRIVATE
 
 C64.cpp
 C64Base.cpp
