--- a/Emulator/FileSystems/CMakeLists.txt
+++ b/Emulator/FileSystems/CMakeLists.txt
@@ -1,6 +1,6 @@
-target_include_directories(vc64Core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(tiaraCore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_sources(vc64Core PRIVATE
+target_sources(tiaraCore PRIVATE
 
 FSDescriptors.cpp
 FileSystem.cpp
