--- a/Emulator/Components/CMakeLists.txt
+++ b/Emulator/Components/CMakeLists.txt
@@ -15,4 +15,4 @@ add_subdirectory(CIA)
 add_subdirectory(Ports)
 add_subdirectory(Memory)
 add_subdirectory(SID)
-add_subdirectory(VICII)
+add_subdirectory(TIA)
