Renamed CIA to RIOT

--- a/Emulator/Components/CMakeLists.txt
+++ b/Emulator/Components/CMakeLists.txt
@@ -11,7 +11,7 @@ EmulatorBase.cpp
 )
 
 add_subdirectory(CPU)
-add_subdirectory(CIA)
+add_subdirectory(RIOT)
 add_subdirectory(Ports)
 add_subdirectory(Memory)
 add_subdirectory(SID)
