--- a/Emulator/Components/CIA/CMakeLists.txt
+++ b/Emulator/Components/CIA/CMakeLists.txt
@@ -2,10 +2,7 @@ target_include_directories(tiaraCore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_sources(tiaraCore PRIVATE
 
-CIA.cpp
-CIABase.cpp
-CIARegs.cpp
-TOD.cpp
-TODBase.cpp
+RIOT.cpp
+RIOTBase.cpp
 
 )
