Renamed DmaDebugger to LogicAnalyzer

--- a/Emulator/Components/TIA/CMakeLists.txt
+++ b/Emulator/Components/TIA/CMakeLists.txt
@@ -11,7 +11,7 @@ VICIICycles.cpp
 VICIITable.cpp
 TIABase.cpp
 TIA.cpp
-DmaDebugger.cpp
-DmaDebuggerBase.cpp
+LogicAnalyzer.cpp
+LogicAnalyzerBase.cpp
 
 )
