Renamed C64 to Atari

--- a/Emulator/Components/CMakeLists.txt
+++ b/Emulator/Components/CMakeLists.txt
@@ -3,8 +3,8 @@ target_include_directories(tiaraCore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_sources(tiaraCore PRIVATE
 
-C64.cpp
-C64Base.cpp
+Atari.cpp
+AtariBase.cpp
 Emulator.cpp
 EmulatorBase.cpp
 
