--- a/Emulator/Components/PIA/CMakeLists.txt
+++ b/Emulator/Components/PIA/CMakeLists.txt
@@ -2,7 +2,7 @@ target_include_directories(tiaraCore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_sources(tiaraCore PRIVATE
 
-RIOT.cpp
-RIOTBase.cpp
+PIA.cpp
+PIABase.cpp
 
 )
