Cartridges can be attached and detached in RetroShell

--- a/Tiara.xcodeproj/xcshareddata/xcschemes/Tiara.xcscheme
+++ b/Tiara.xcodeproj/xcshareddata/xcschemes/Tiara.xcscheme
@@ -109,16 +109,16 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
+            argument = "-&quot;cart attach /tmp/Combat.bin&quot; "
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-&quot;.&quot;"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "-&quot;break at $1000&quot;"
-            isEnabled = "NO">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "-&quot;c64 set RUN_AHEAD 2&quot; "
-            isEnabled = "NO">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "-&quot;c64&quot;"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-&quot;i c64&quot;"
