--- a/Tiara.xcodeproj/xcshareddata/xcschemes/Tiara.xcscheme
+++ b/Tiara.xcodeproj/xcshareddata/xcschemes/Tiara.xcscheme
@@ -118,11 +118,11 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-&quot;break at $1001&quot;"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-&quot;break at $1032&quot;"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
