Added HB logic (horizontal blank)

--- a/Emulator/Components/TIA/CMakeLists.txt
+++ b/Emulator/Components/TIA/CMakeLists.txt
@@ -2,13 +2,10 @@ target_include_directories(tiaraCore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_sources(tiaraCore PRIVATE
 
-VICII.cpp
-VICIIBase.cpp
-VICIIDraw.cpp
-VICIISprites.cpp
-VICIIMemory.cpp
-VICIICycles.cpp
-VICIITable.cpp
+BeamTraps.cpp
+Ball.cpp
+Player.cpp
+Playfield.cpp
 TIABase.cpp
 TIA.cpp
 LogicAnalyzer.cpp
