Work on Playfield

--- a/Tiara.xcodeproj/xcshareddata/xcschemes/Tiara.xcscheme
+++ b/Tiara.xcodeproj/xcshareddata/xcschemes/Tiara.xcscheme
@@ -113,7 +113,7 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-&quot;cart attach /tmp/vsync.a26&quot;"
+            argument = "-&quot;cart attach /tmp/playfield.a26&quot;"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
