--- a/Tiara.xcodeproj/xcshareddata/xcschemes/Tiara.xcscheme
+++ b/Tiara.xcodeproj/xcshareddata/xcschemes/Tiara.xcscheme
@@ -113,12 +113,16 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "-&quot;cart attach /tmp/colorsprites.a26&quot;"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "-&quot;cart attach /tmp/missiles.a26&quot;"
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-&quot;cart attach /tmp/sprite.a26&quot;"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-&quot;.&quot;"
