--- a/Tiara.xcodeproj/xcshareddata/xcschemes/Tiara.xcscheme
+++ b/Tiara.xcodeproj/xcshareddata/xcschemes/Tiara.xcscheme
@@ -133,7 +133,7 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-&quot;cart attach /tmp/complexscene2.a26&quot;"
+            argument = "-&quot;cart attach /tmp/bitmap.a26&quot;"
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
